# learning

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  mypy.ini  pyproject.toml  tox.ini
learning/: app.py  database.py  entities.py  errors.py  main.py  repositories.py  schemas.py
learning/alembic/: env.py
learning/alembic/versions/: 20210522153838.py
learning/apiv1/: dependencies.py  todo.py
pytest_tests/: conftest.py  test_entities.py  test_repositories.py  utils.py
pytest_tests/apiv1/: conftest.py  test_todo.py
ward_tests/: fixtures.py  test_entities.py  test_repositories.py
ward_tests/apiv1/: test_todo.py
