[tool.poetry]
name = "learning"
version = "1.0.0"
description = "Python Development Template"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4"
fastapi = "^0.65.1"
Hypercorn = "^0.11.2"
alembic = "^1.6.3"
SQLAlchemy = {version = "^1.4.15", extras = ["mypy"]}
aiosqlite = "^0.17.0"
aiologger = "^0.6.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.812"
flake8 = "^3.8.4"
pytest = "^6.2.2"
ward = "^0.56.0-beta.0"
pytest-asyncio = "^0.15.1"
coverage = "^5.5"
pytest-cov = "^2.12.0"
tox = "^3.23.1"
httpx = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
balanced_wrapping = true
line_length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=learning"
testpaths = [
    "pytest_tests",
]
markers = [
  "integration"
]

[tool.ward]
path = ["ward_tests"]
progress-style = ["bar"]
